--- a/2. Hashing.md
+++ b/2. Hashing.md
@@ -22,3 +22,16 @@ https://hashcat.net/wiki/doku.php?id=example_hashes
 
 - command: hashcat -m <hash_type> -a <attack_mode> hashfile wordlist
 - example: hashcat -m 1800 -a 0 hash3.txt ~/rockyou.txt
+
+5. John the Ripper
+
+- Syntax:
+john --format=[format] --wordlist=[path to wordlist] [path to file]
+- Example:
+john --format=raw-md5 --wordlist=/usr/share/wordlists/rockyou.txt hash_to_crack.txt
+- Identified the hash using hash-identifier
+
+<img width="713" height="114" alt="image" src="https://github.com/user-attachments/assets/7d2980d2-1be3-4137-9ca5-0bf81239e8c4" />
+
+<img width="1100" height="161" alt="image" src="https://github.com/user-attachments/assets/64edd908-a4b5-48bc-9eb7-6cc7e7df4f5a" />
+
