--- a/2. Hashing.md
+++ b/2. Hashing.md
@@ -13,7 +13,7 @@ In the example above, we have four parts separated by $:
 - 76UzfgEM5PnymhQ7TlJey1 is the salt used
 - /OOSg64dhfF.TigVPdzqiFang6uZA4QA1pzzegKdVm4 is the hash value
 
-3. hash formats and password prefixes
+3. hash formats and hashed password prefixes
 https://hashcat.net/wiki/doku.php?id=example_hashes
 
 4. crack hash tool: crackstation(website), hashes.com(website), hashcat(tool)
